hack/test/whisker/flows-traffic-generator/manifests/03-tiers.yaml
# Calico tiers at different orders for testing tier filtering.
apiVersion: projectcalico.org/v3
kind: Tier
metadata:
  name: compliance
spec:
  order: 50
---
apiVersion: projectcalico.org/v3
kind: Tier
metadata:
  name: security
spec:
  order: 100
---
apiVersion: projectcalico.org/v3
kind: Tier
metadata:
  name: platform
spec:
  order: 200
---
apiVersion: projectcalico.org/v3
kind: Tier
metadata:
  name: application
spec:
  order: 300
